--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -17,6 +17,8 @@ $footer-color: #ffffff;
 
 $contrast-color: #ffffff;
 
-// font-family
-$font-family: "Nunito";
+$font-family: "Gotham Pro regular", sans-serif;
 
+$font-family2: "Gotham Pro bold", sans-serif;
+
+$logo: "Manrope", sans-serif;
