--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,8 +12,15 @@ body{
 .header{
     width: 100%;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    padding: 11px 0;
     &__container{
-        margin: 0 120px;
+        display: flex;
+        justify-content: space-between;
+        max-width: 1440px;
+        width: 100%;
+        padding: 0 120px;
     }
     &__wrapper{
         width: 100%;
@@ -33,6 +40,32 @@ body{
         align-items: center;
         justify-content: space-between;
     }
+    &__drop-down{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 27px 27px 24px 23px;
+        background-color: white;
+        border-radius: 16px;
+        position: absolute;
+        top: 39px;
+        opacity: 1;
+        z-index: 50;
+        
+        @include transition(0.2s);
+        &_active{
+            z-index: -10;
+            opacity: 0;
+        }
+    }
+    #subscription-dropdown{
+        width: 179px;
+        left: -33px;
+    }
+    #language-dropdown{
+        width: 114px;
+        left: 0;
+    }
     &__subscription{
         position: relative;
         &_active{
@@ -42,29 +75,8 @@ body{
             }
         }
     }
-    &-subscriptions__wrapper{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 27px 24px 24px 23px;
-        background-color: white;
-        border-radius: 16px;
-        position: absolute;
-        top: 39px;
-        left: -30px;
-        width: 176px;
-        opacity: 1;
-        z-index: 50;
-        @include transition(0.2s);
-        &_active{
-            z-index: -10;
-            opacity: 0;
-        }
-        
-    }
     &-subscriptions__link{
         margin-top: 20px;
-        font-family: $font-family;
         @include transition(0.2s);
         cursor: pointer;
 
@@ -109,6 +121,8 @@ body{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        max-width: 351px;
+        width: 100%;
     }
     &__link{
         user-select: none;
@@ -116,19 +130,19 @@ body{
         color: #333;
         cursor: pointer;
 
-        &:nth-child(2){
-            margin-left: 44px;
-        }
-        &:nth-child(3){
-            margin-left: 46px;
-        }
-        &:nth-child(4){
-            margin-left: 48px;
-        }
+        // &:nth-child(2){
+        //     margin-left: 44px;
+        // }
+        // &:nth-child(3){
+        //     margin-left: 46px;
+        // }
+        // &:nth-child(4){
+        //     margin-left: 48px;
+        // }
 
-        &:not(:first-child):hover {
-            color: var(--blue, #1749B3);
-        }
+        // &:not(:first-child):hover {
+        //     color: var(--blue, #1749B3);
+        // }
     }
     &__activity{
         display: flex;
@@ -136,7 +150,13 @@ body{
         justify-content: space-between;
     }
     &-maessenger{
-        cursor: pointer;    
+        cursor: pointer; 
+       
+        img{
+            &:hover{
+                fill: var(--blue, #1749B3);            
+            }
+        }   
         &:last-child{
             margin-left: 12px;
         }
@@ -203,5 +223,519 @@ body{
         border-radius: 8px;
         background-color: #1749B3;
     }
+
+    &__burger-btn{
+        display: none;
+
+    }
+
+
+    @media screen and (max-width:1234px) {
+        &__container{
+            padding: 0 50px;
+        }
+        &__log-in{
+            font-size: 16px;
+            padding: 8px 37px;
+        }
+    }
+    @media screen and (max-width:1023px) {
+        position: fixed;
+        top: 0;
+        left: 0;
+        &__container{
+            padding: 0 50px;
+        }
+        &__wrapper{
+           padding: 11px 0; 
+           position: relative;
+        }
+        &-logo__link{
+            img{
+                width: 32px;
+            }
+        }
+        &__menu{
+            display: none;
+        }
+        &__activity{
+            display: none;
+
+        }
+        // &__menu{
+        //     background-color: white;
+        //     padding: 35px;
+        //     align-items: center;
+        //     font-size: 25px;
+        //     opacity: 1;
+        //     text-align: center;
+        //     top: 70px;
+        //     position: absolute;
+        //     flex-direction: column;
+        //     justify-content: center;
+        //     max-width: 900px;
+        //     border-radius: 12px;
+        //     box-shadow: 0px 12px 28px 0px rgba(177, 177, 177, 0.20);
+        //     width: 100%;
+        //     left: 50%;
+        //     max-height: 216px;
+        //     transform: translate(-50%);
+        // }
+        // &__subscription{
+        //     position: relative;
+        // }
+        // &__drop-down{
+        //     background-color: white;
+        //     padding: 35px;
+        //     align-items: center;
+        //     font-size: 30px;
+        //     opacity: 1;
+        //     text-align: center;
+            
+            
+        //     position: absolute;
+        //     flex-direction: column;
+        //     justify-content: center;
+            
+        //     border-radius: 12px;
+        //     box-shadow: 0px 12px 28px 0px rgba(177, 177, 177, 0.20);
+           
+            
+        // }
+        // #subscription-dropdown{
+        //     max-width: 900px;
+        //     left: 50%;
+        //     transform: translate(-50%); 
+        //     top: 200px;
+        //     width: 100%;
+        // }
+        // #language-dropdown{
+        //     width: 114px;
+        //     left: 0;
+        // }
+
+        // &__activity{
+        //     display: none;
+        //     align-items: center;
+        //     opacity: 1;
+        //     text-align: center;
+        //     top: 70px;
+        //     position: absolute;
+        //     flex-direction: column;
+        //     justify-content: center;
+        //     max-width: 150px;
+        //     left: 50%;
+        //     transform: translate(-50%);
+        // }
+        // &__link{
+        //     margin-top: 20px;
+        //     &:first-child{
+        //         margin-top: 0;
+        //     }
+        // }
+        &__burger-btn{
+            display: flex;
+            align-items: center;
+            position: relative;
+            width: 24px;
+            height: 24px;
+            top: 5.5px;
+            
+            &::before,&::after{
+                content: '';
+                background-color: #070033;
+                position: absolute;
+                width: 100%;
+                height: 2.5px;
+                left: 0;
+            }
+            &::before{
+                top: 2px;
+            }
+            &::after{
+                bottom: 2px;
+            }
+            span{
+                background-color: #070033;
+                position: absolute;
+                width: 100%;
+                height: 2.5px;
+                top: 11px;
+            }
+        }
+    }
+    @media screen and (max-width:767px) {
+        &__container{
+            padding: 0 32px;
+        }
+        &__menu{
+            display: none;
+        }
+        &__activity{
+            display: none;
+
+        }
+    }
+
+    @media screen and (max-width:374px) {
+        &__container{
+            padding: 0 24px;
+        }
+        &__name{
+            display: none;
+        }
+    }
 }
 
+//MAIN
+
+.main{
+    margin: 60px 0 0 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    &__container{
+    //margin-top: 54px;
+    display: flex;
+    justify-content: center;
+    max-width: 1440px;
+    width: 100%;
+    padding: 0 120px;
+
+    
+    }
+
+    &__benefit{
+        margin-right: 16px;
+        width: 592px;
+        padding: 114px 60px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 32px;
+        background: #1749b3;
+        box-shadow: 0 4px 24px 0 rgba(213,216,221,.2);
+        justify-content: center;
+        align-items: flex-start;
+        
+    }
+    &-benefit__title{
+        color: white;
+        font-size: 36px;
+        font-family: $font-family2;
+        font-weight: 700;
+        line-height: 140%;
+    }
+    &-benefit__description{
+        color: white;
+        margin-top: 24px;
+        font-size: 16px;
+        font-family: $font-family;
+        line-height: 150%;
+
+    }
+    &-benefit__button{
+        margin-top: 40px;
+        padding: 16px 24px;
+        background-color: white;
+        border-radius: 16px;
+        a{
+            color: #070033;
+            font-size: 17px;
+            font-family: $font-family2;
+            font-weight: 700;
+            
+        }
+    }
+    &-img__wrapper{
+        background-color: gray;
+        overflow: hidden;
+        border-radius: 24px;
+        width: 592px;
+        //position: relative;
+        box-shadow: 0px 6.97297477722168px 16.270273208618164px 0px rgba(244, 245, 245, 0.20);
+            img{
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+        }
+    }
+
+    //SUBSCRIPTIONS BLOCK
+
+    &-subs__container{
+        max-width: 1440px;
+        width: 100%;
+         
+    }
+    &__subs{
+        margin-top: 120px;
+    }
+    &-subs__wrapper{
+        margin: 0 120px;
+        
+    }
+    &-subs__title{
+        color: var(--black-2, #171717);
+        text-align: center;
+        font-size: 25px;
+        font-family: $font-family2;
+        font-weight: 700;
+        line-height: 140%;
+        margin-bottom: 37px;
+    }
+    &-sub__wrapper{
+        border-radius: 32px;
+        background: var(--white, #FFF);
+        box-shadow: 0px 4px 24px 0px rgba(213, 216, 221, 0.20);
+        display: flex;
+        justify-content: space-between;
+        margin-top: 16px;
+    }
+    &-sub-left__wrapper{
+        margin: 60px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        max-width: 440px;
+        width: 100%;
+    }
+    &-sub__title{
+        color: var(--black-2, #171717);
+        font-size: 22px;
+        font-family: $font-family2;
+        line-height: 140%;
+    }
+    &-sub__discription{
+        margin-top: 22px;
+        color: var(--black-1, #333);
+        font-size: 16px;
+        font-family: $font-family;
+        line-height: 150%;
+
+    }
+    &-sub__button{
+        margin-top: 38px;   
+        border-radius: 12px;
+        background: var(--blue, #1749B3);
+        padding: 16px 24px;
+        
+        a{
+            color: var(--white, #FFF);
+            font-size: 15px;
+            font-family: $font-family2;
+            font-weight: 700;
+            line-height: 130%;
+        }
+    }
+    &-sub-right__wrapper{
+        border-radius: 32px;
+        width: 588px;
+        height: 342px;
+        img{
+            border-radius: 32px;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+    // &__subs{
+    //     display: flex;
+    //     flex-direction: column;
+    // }
+    // &-subs__title{
+    //     color: var(--black-2, #171717);
+    //     text-align: center;
+    //     font-size: 32px;
+    //     font-family: $font-family2;
+    //     font-weight: 700;
+    // }
+    // &-sub__wrapper{
+    //     display: flex;
+    //     justify-content: center;
+    // }
+    // &-sub-left__wrapper{
+    //     max-width: 440px;
+    // }
+
+    @media screen and (max-width:1234px) {
+        &__container{
+            padding: 0 50px;
+        }
+        &-subs__wrapper{
+            margin: 0 50px;
+            
+        }
+    }
+
+    @media screen and (max-width:1023px) {
+        //margin-top: 102px;
+        margin-top: 106px;
+        &__container{
+            padding: 0 50px;
+        }
+        &__benefit{
+            min-height: 100%;
+            padding: 32px 30px 33px 30px;
+        }
+        &-benefit__title{
+            font-size: 30px;
+        }
+        &-benefit__description{
+            margin-top: 18px;
+        }
+        &-benefit__button{
+            margin-top: 30px;
+        }
+    }
+    @media screen and (max-width:767px) {
+        &__subs{
+            margin-top: 100px;
+        }
+        //margin-top: 55px + 52px;
+        &__container{
+            padding: 0 32px;
+        }
+        &__benefit{
+            width: 344px;
+            padding: 23px 20px 24px 20px;
+        }
+        &-benefit__title{
+            font-size: 28px;
+           
+        }
+        &-img__wrapper{
+            width: 344px;
+
+        }
+        &-benefit__button{
+        }
+        &-subs__wrapper{
+            margin: 0 32px;
+            
+        }
+        &-sub-left__wrapper{
+            max-width: 100%;
+            margin: 49px 28px 48px 32px;
+            width: 67%;
+        }
+
+        &-sub-right__wrapper{
+            width: auto;
+            height: auto;
+        }
+        &-subs__title{
+            margin-bottom: 32px;
+        }
+        &-sub__discription{
+            display: none;
+        }
+        &-sub__button{
+            margin-top: 24px;
+        }
+        
+    }
+    @media screen and (max-width:690px){
+        &__container{
+            flex-direction: column-reverse;
+            align-items: center;
+        }
+        &__benefit{
+            width: 100%;
+            margin-right: 0;
+            padding: 20px;
+            min-height: 0%;
+        }
+        &-benefit__button{
+            margin-top: 31px;
+            font-size: 15px;
+            padding: 16px 24px;
+            width: 100%;
+        }
+        &-img__wrapper{
+            margin-bottom: 16px;
+            width: 100%;
+        }
+    }
+    @media screen and (max-width:552px) {
+        &-sub__wrapper{
+            flex-direction: column-reverse;
+            
+        }
+        &-sub-left__wrapper{
+            width: auto;
+        }
+        &-sub__discription{
+            display: block;
+            // max-width: 80%;
+            // margin-right: 58px;
+        }
+        &-sub__button{
+            width: 100%;
+        }
+    }
+    @media screen and (max-width:374px) {
+        margin-top: 102px;
+        
+        &__container{
+            padding: 0 24px;
+
+        }
+        &__wrapper{
+            margin: 0 24px;
+            flex-direction: column-reverse;
+            align-items: center;
+        }
+        &__benefit{
+            max-width: 327px;
+            height: 100%;
+            width: 100%;
+            margin-right: 0;
+            padding: 20px;
+        }
+        &-benefit__title{
+            font-size: 28px;
+        }
+        &-benefit__description{
+            font-size: 16px;
+            margin-top: 16px;
+        }
+        &-benefit__button{
+            margin-top: 31px;
+            font-size: 15px;
+            padding: 16px 24px;
+            width: 100%;
+        }
+
+        
+        &-img__wrapper{
+            max-width: 327px;
+            height: 276px;
+            margin-bottom: 16px;
+            width: 100%;
+        }
+
+        &-subs__wrapper{
+            margin: 0 24px;
+        }
+        &-subs__title{
+            margin-bottom: 28px;
+        }
+        &-sub__button{
+            width: 100%;
+            margin-top: 32px;
+        }
+        &-sub-left__wrapper{
+            align-items: center;
+
+        }
+        &-sub__button{
+            width: 80%;
+        }
+
+    }
+
+    
+}
