--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,11 @@
 body{
     overflow-x: hidden;
     background-color: #ECF3FB;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}   
 
 .header{
     width: 100%;
@@ -870,12 +874,6 @@ body{
                 }
             }
         }
-
-        @media screen and (max-width:1234px) {
-            &__wrapper{
-                margin: 0 50px;
-            } 
-        }
         @media screen and (max-width:1443px) {
             .invite-friens{
 
@@ -890,6 +888,13 @@ body{
                 }
             }
         }
+
+        @media screen and (max-width:1234px) {
+            &__wrapper{
+                margin: 0 50px;
+            } 
+        }
+       
     
         @media screen and (max-width:1023px) {
             .invite-friens{
@@ -1003,6 +1008,363 @@ body{
         }
     }    
 
+
+
+    //ABOUT-US BLOCK
+    .about-us{
+        width: 100%;
+        &__container{
+            max-width: 1440px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        &__wrapper{
+            margin: 0 120px;
+        }
+        &__title{
+            margin-top: 120px;
+            text-align: center;
+            font-size: 32px;
+            font-family: $font-family2;
+            font-weight: 700;
+            line-height: 140%;
+        }
+        &__content{
+            display: flex;
+            justify-content: space-between;
+            gap: 16px;
+            margin-top: 37px;
+        }
+        &__text{
+            width: 592px;
+            padding: 60px;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            border-radius: 32px;
+        }
+        &__paragraph{
+            margin-top: 32px;
+            color: var(--black-1, #333);
+            font-size: 18px;
+            font-family: $font-family;
+            line-height: 150%;
+            max-width: 470px;
+            &:last-child{
+                color: var(--black-2, #171717);
+                font-family: $font-family2;
+                font-weight: 700;
+            }
+        }
+        &__logo{
+            width: 130px;
+            height: 130px;
+            img{
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__img{
+            width: 592px;
+            box-shadow: 0px 12px 28px 0px rgba(244, 245, 245, 0.20);
+            img{
+                object-fit: cover;
+                height: 100%;
+                width: 100%;
+                border-radius: 32px;
+
+            }
+        }
+
+        @media screen and (max-width:1234px) {
+            &__wrapper{
+                margin: 0 50px;
+            } 
+        }
+
+        @media screen and (max-width:1023px) {
+            &__text{
+                padding: 20px 19px 20px 22px;
+            }
+            &__logo{
+                width: 60px;
+                height: 60px;
+            }
+            &__paragraph{
+                font-size: 17px;
+                margin-top: 16px;
+            }
+            
+        }
+        @media screen and (max-width:767px) {
+            &__content{
+                margin-top: 32px;
+            }
+            &__wrapper{
+                margin: 0 32px;
+            } 
+            &__title{
+                margin-top: 100px;
+            }
+        }
+        @media screen and (max-width:690px){
+            &__content{
+                flex-direction: column-reverse;
+            }   
+            &__text{
+                width: 100%;
+                padding: 20px;
+            }
+            &__img{
+                width: 100%;
+            }
+            &__paragraph{
+                max-width: 100%;
+            }
+        }
+        @media screen and (max-width:374px) {
+            &__content{
+                margin-top: 28px;
+            }
+            &__wrapper{
+                margin: 0 24px;
+            } 
+        }
+    }
+
+
+    //FAQ BLOCK
+
+    .FAQ{
+        width: 100%;
+        &__container{
+            max-width: 1440px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        &__wrapper{
+            margin: 0 120px;
+        }
+        &__title{
+            color: var(--black-2, #171717);
+            text-align: center;
+            font-size: 32px;
+            font-family: $font-family2;
+            font-weight: 700;
+            line-height: 130%;
+            margin-top: 120px;
+            margin-bottom: 40px;
+        }
+        &__content{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            gap: 16px;
+        }
+        &__item{
+            // display: flex;
+            // justify-content: space-between;
+            // flex-direction: column;
+            // align-items: center;
+            padding: 38px 40px 39px 40px;
+            width: 100%;
+            border-radius: 32px;
+            background: white;
+
+            box-shadow: 0px 12px 28px 0px rgba(244, 245, 245, 0.20), 0px 4px 24px 0px rgba(213, 216, 221, 0.20);
+        }
+        &-question__wrapper{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            align-items: center;
+            flex-direction: row;
+            
+        }
+        &__question{
+            color: var(--black-2, #171717);
+            font-size: 18px;
+            font-family: $font-family2;
+            line-height: 150%;
+        }
+        &__answer {
+            margin-top: 15px;
+            color: var(--black-1, #333);
+            font-size: 17px;
+            font-family: $font-family;
+            line-height: 150%;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease-out, height 0.3s ease-out;
+          }
+          
+          &__answer.collapsing {
+            max-height: 100%;
+            height: auto;
+          }
+        &__arrow{
+            margin-left: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            border-radius: 12px;
+            background: rgba(23, 23, 23, 0.05);
+            @include transition(0.3s);
+        }
+
+        .arrow-rotate{
+            transform: rotate(180deg);
+        }
+        &__support{
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 16px;
+            background: var(--black-1, #333);
+            padding: 16px 24px;
+            font-size: 17px;
+            font-family: $font-family2;
+            font-weight: 700;
+            line-height: 130%;
+            width: 243px;
+            margin-top: 40px;
+            a{
+                color: white;
+                text-decoration: none;
+            }
+        }
+
+        
+
+        @media screen and (max-width:1234px) {
+            &__wrapper{
+                margin: 0 50px;
+            } 
+        }
+        @media screen and (max-width:767px) {
+            &__wrapper{
+                margin: 0 32px;
+            } 
+            &__title{
+                margin-top: 100px;
+                margin-bottom: 32px;
+            }
+            &__support{
+                margin-top: 32px;
+            }
+        }
+        @media screen and (max-width:374px) {
+            &__wrapper{
+                margin: 0 24px;
+            } 
+            &__title{
+                margin-bottom: 28px;
+            }
+            &__support{
+                margin-top: 28px;
+            }
+        }
+    }
+
+
+
+    //REQUEST BLOCK
+
+    .request{
+        width: 100%;
+        margin-top: 120px;
+        &__container{
+            max-width: 1440px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        &__wrapper{
+            margin: 0 120px;
+            border-radius: 32px;
+            padding: 40px 60px;
+            background: var(--blue, #1749B3);
+            box-shadow: 0px 12px 28px 0px rgba(244, 245, 245, 0.20), 0px 4px 24px 0px rgba(213, 216, 221, 0.20), 0px 4px 24px 0px rgba(213, 216, 221, 0.20);
+        }
+        &__content{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+        }
+        &__title{
+            color: white;
+            font-size: 22px;
+            font-family: $font-family2;
+            font-weight: 700;
+            line-height: 140%;
+        }
+        &__paragraph{
+            margin-top: 21px;
+            font-size: 18px;
+            color: white;
+            font-family: $font-family;
+            line-height: 150%;
+        }
+        &__button{
+            padding: 16px 24px;
+            width: 248px;
+            border-radius: 16px;
+            margin-left: 80px;
+            a{
+                font-size: 17px;
+                font-family: $font-family2;
+                font-weight: 700;
+                line-height: 130%;
+                color: var(--black-2, #171717);
+            }
+        }
+        @media screen and (max-width:1234px) {
+            &__wrapper{
+                margin: 0 50px;
+            } 
+        }
+        @media screen and (max-width:767px) {
+            margin-top: 100px;
+            &__wrapper{
+                margin: 0 32px;
+                padding: 32px;
+            } 
+            &__button{
+                margin-left: 44px;
+                width: 100%;
+            }
+            &__title{
+                margin-top: 16px;
+                font-size: 19px;
+            }
+            &__paragraph{
+                font-size: 17px;
+            }
+        }
+        @media screen and (max-width:652px) {
+            &__content{
+                flex-direction: column;
+            }
+            &__button{
+                margin-top: 32px;
+                min-width: 100%;
+                margin-left: 0;
+            }
+        }
+        @media screen and (max-width:374px) {
+            &__wrapper{
+                margin: 0 24px;
+                padding: 40px 20px;
+            } 
+        }
+    }
     
 }
 
@@ -1057,6 +1419,12 @@ body{
     &__nav{
         display: flex;
     }
+    &-nav__subs{
+        margin-left: 55px;
+    }
+    &-nav__wrapper{
+        margin-left: 100px;
+    }
     &-nav__link{
         margin-top: 12px;
 
@@ -1108,11 +1476,19 @@ body{
         &:last-child{
             display: flex;
             align-items: center;
+            justify-content: flex-end;
+            width: 100%;
         }
     }
     .footer-massanger-link__wrapper{
         display: flex;
     }
+    &__icon{
+        &:last-child{
+            margin-left: 16px;
+        }
+    }
+    
 
     @media screen and (max-width:1234px) {
         &__wrapper{
@@ -1142,6 +1518,11 @@ body{
         align-items: center;
        }
     }
+    @media screen and (max-width:716px){
+        &-nav__subs{
+            margin-left: 0px;
+        }
+    }
     @media screen and (max-width:599px){
         &__logo{
             width: 100%;
@@ -1153,6 +1534,7 @@ body{
             width: 100%;
             justify-content: space-between;
         }
+        
         &-nav__wrapper{
             margin-left: 28px;
         } 
