--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1784,7 +1784,8 @@ body{
                 height: 1px; /* Толщина линии */
                 background-color: white;
                 transform: scaleX(0); /* Начальное состояние - линия невидима */
-                transition: transform 0.3s ease-in-out; /* Плавный переход */
+                transition: transform 0.3s ease-in-out;
+                transform-origin: left;
             }
             &:hover::after {
             transform: scaleX(1); /* Линия становится видимой при наведении */
